--- a/package.json
+++ b/package.json
@@ -1,42 +1,35 @@
 {
   "name": "ampm_react_native_test",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.ts",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.21.0",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/native-stack": "^6.9.17",
-    "expo": "~50.0.6",
-    "expo-location": "~16.5.3",
-    "expo-status-bar": "~1.11.1",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native-stack": "^7.3.13",
+    "dotenv": "^16.5.0",
+    "expo": "~53.0.9",
+    "expo-location": "~18.1.5",
+    "expo-maps": "~0.10.0",
+    "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
-    "react-native": "0.73.4",
-    "react-native-maps": "1.10.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native": "0.79.2",
+    "react-native-maps": "1.20.1",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "^4.10.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@testing-library/react-native": "^12.4.3",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
+    "@babel/core": "^7.25.2",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^13.2.0",
+    "@types/react": "~19.0.10",
     "jest": "^29.7.0",
-    "jest-expo": "~50.0.2",
-    "typescript": "^5.1.3"
-  },
-  "jest": {
-    "preset": "jest-expo",
-    "transformIgnorePatterns": [
-      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
-    ]
+    "typescript": "~5.8.3"
   },
   "private": true
 }
